# cardano-api

./: .changie.yaml  .git-blame-ignore-revs  .gitattributes  .gitignore  .herald.yml  .hlint.yaml  011becb3969a7abe.css  1456-dff92bb6745f8275.js.download  1470-63148bfc6df299e8.js.download  222e98525eff282f.css  2598-d1b18b71eed30711.js.download  2819-db4d66724f1ba10b.js.download  2829-c36fa68d4c5a3114.js.download  3fc29338721392f6.css  430-ff581a7cd93b8b93.js.download  44172072(1).js.download  44b2f92f2be025d7.css  4721-cef316527eb29383.js.download  475-ef7a1d99d3811e22.js.download  479-fee3b88f45592bea.js.download  4af9aafd612346fe.css  4ba573f12f994887.css  4d99978a-05f0d19034ccf2d0.js.download  4fd0a9ca60997545.css  7144-49a5d70277f4d306.js.download  89f0191abc1ad313.css  8d1556e622e7508a.css  94726e6d-8102d0319c74e2fb.js.download  953-e215d17fc00b0858.js.download  95b358fb5c9305a3.css  CHANGELOG-REQUIREMENTS.md  CHANGELOG.md  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PLAN-rpc-flag.md  README.md  (+84 more)
.changes/: 20260409_minor_updates.yml  (+103 more)
cardano-api-wasm/: cardano-api-wasm.cabal
cardano-api-wasm-foundation-only/: cardano-api-wasm-foundation-only.cabal
cardano-api-wasm-foundation-only/src/Cardano/Api/: Wasm.hs
cardano-api-wasm-ledger-only/: cardano-api-wasm-ledger-only.cabal
cardano-api-wasm/app/: cardano-api-wasm.hs
cardano-wasm/: CHANGELOG.md  README.md  cabal.project  cardano-wasm.cabal  flake.nix  hie.yaml  script.sh
cardano-wasm/app/: Bridge.hi  Bridge.hs  ExceptionHandling.hs  Main.hi  Main.hs  TxBodyWrapper.hs  WasmApi.hs
cardano-wasm/app-wasm-grpc-gen/: Main.hs
cardano-wasm/cardano-wasi-lib/: Cardano-Wasm-Api-Address.html  Cardano-Wasm-Api-Certificate-StakeCertificate.html  Cardano-Wasm-Api-GRPC.html  Cardano-Wasm-Api-Info.html  Cardano-Wasm-Api-InfoToTypeScript.html  Cardano-Wasm-Api-Tx.html  Cardano-Wasm-Api-TypeScriptDefs.html  Cardano-Wasm-Api-Wallet.html  Cardano-Wasm-ExceptionHandling.html  Cardano-Wasm-NumberConversion.html  cardano-wasi-lib.haddock  doc-index.json
cardano-wasm/cardano-wasi-lib/src/: Cardano.Wasm.Api.Address.html  Cardano.Wasm.Api.Certificate.StakeCertificate.html  Cardano.Wasm.Api.GRPC.html  Cardano.Wasm.Api.Info.html  Cardano.Wasm.Api.InfoToTypeScript.html  Cardano.Wasm.Api.Tx.html  Cardano.Wasm.Api.TypeScriptDefs.html  Cardano.Wasm.Api.Wallet.html  Cardano.Wasm.ExceptionHandling.html  Cardano.Wasm.Internal.Api.Era.html  Cardano.Wasm.Internal.Api.Random.html  Cardano.Wasm.NumberConversion.html
cardano-wasm/demo/: .gitignore  README.md  build.sh  cardano-api.js  cardano-wasm.js  elm.js  elm.json
cardano-wasm/demo/src/: Bech32.elm  Blockfrost.elm  Format.elm  Hex.elm  Main.elm  Net.elm  Ports.elm  State.elm  Types.elm  Update.elm  View.elm  Wasm.elm
cardano-wasm/demo/tests/: CoreTest.elm
cardano-wasm/demo/tests/wasm/: README.md  api-regression.mjs  package-lock.json  package.json
cardano-wasm/demo/web/: index.html  ports.js  pparams.js
cardano-wasm/example/: cardano-api.d.ts  cardano-api.js  example.js  index.html
cardano-wasm/examples/: README.md
cardano-wasm/examples/basic/: README.md  example.js  preview_pparams.json
cardano-wasm/examples/grpc/: README.md  envoy-conf.yaml  example.js  index.html
cardano-wasm/examples/simple-wallet/: README.md  envoy-conf.yaml  example.js  index.html
cardano-wasm/grpc-example/: envoy-conf.yaml  example.js  index.html
cardano-wasm/js-test/: basic-test.golden  basic-test.spec.ts
cardano-wasm/lib-wrapper/: cardano-api.d.ts  cardano-api.js  grpc-connection.d.ts  main.js  signed-tx.d.ts  unsigned-tx.d.ts  wallet.d.ts
cardano-wasm/nix/: libsodium.nix
cardano-wasm/npm-test/: node.test.js  webpack-test.spec.ts
cardano-wasm/npm-test/webpack/: index.html  package.json  webpack.config.js
cardano-wasm/npm-test/webpack/src/: index.js
cardano-wasm/npm-wrapper/: README.md  api.test.js  package.json  rollup.config.js
cardano-wasm/npm-wrapper/src/: browser.js  node.js
cardano-wasm/src-lib/Cardano/Wasm/: ExceptionHandling.hs  NumberConversion.hs
cardano-wasm/src-lib/Cardano/Wasm/Api/: Address.hs  GRPC.hs  Info.hs  InfoToTypeScript.hs  Tx.hs  TypeScriptDefs.hs  Wallet.hs
cardano-wasm/src-lib/Cardano/Wasm/Api/Certificate/: StakeCertificate.hs
cardano-wasm/src-lib/Cardano/Wasm/Internal/Api/: Era.hs  Random.hs
cardano-wasm/src-wasi/Cardano/Wasi/Internal/: Conversion.hs
cardano-wasm/src-wasi/Cardano/Wasi/Internal/Api/: Address.hs  GRPC.hs  Memory.hs  Tx.hs  Wallet.hs
cardano-wasm/src-wasi/Cardano/Wasi/Internal/Api/Certificate/: StakeCertificate.hs
cardano-wasm/src-wasm/Cardano/Wasm/Internal/JavaScript/: Bridge.hs  GRPC.hs  GRPCTypes.hs
cardano-wasm/src/Cardano/Wasm/Api/: Info.hs  Tx.hs
cardano-wasm/src/Cardano/Wasm/General/: ExceptionHandling.hs
cardano-wasm/src/Cardano/Wasm/Internal/: ExceptionHandling.hs
cardano-wasm/src/Cardano/Wasm/Internal/Api/: Address.hs  GRPC.hs  Info.hs  InfoToTypeScript.hs  Tx.hs  TypeScriptDefs.hs  Wallet.hs
cardano-wasm/src/Cardano/Wasm/Internal/JavaScript/: Bridge.hs  GRPC.hs  GRPCTypes.hs  Random.hs
cardano-wasm/src/Cardano/Wasm/JavaScript/: Bridge.hs
cardano-wasm/src/General/: ExceptionHandling.hs  TxBodyWrapper.hs
cardano-wasm/src/JavaScript/: Bridge.hs
cardano-wasm/src/WasmApi/: Tx.hs  WasmApi.hs
cardano-wasm/test/Test/Golden/Cardano/Wasm/: TypeScript.hs
cardano-wasm/test/cardano-wasm-golden/: cardano-wasm-golden.hs
cardano-wasm/test/cardano-wasm-golden/Test/Golden/Cardano/Wasm/: TypeScript.hs
cardano-wasm/typedoc/: hierarchy.html  index.html
cardano-wasm/typedoc/assets/: navigation.js  search.js
cardano-wasm/typedoc/functions/: cardano-api.initialise.html
cardano-wasm/typedoc/interfaces/: cardano-api._internal_.CardanoApi.html  grpc-connection.GrpcConnection.html  signed-tx.SignedTx.html  unsigned-tx.UnsignedTx.html  wallet.Wallet.html
cardano-wasm/typedoc/modules/: cardano-api._internal_.html  cardano-api.html  grpc-connection.html  signed-tx.html  unsigned-tx.html  wallet.html
cardano-wasm/wallet-example/: envoy-conf.yaml  example.js  index.html  stylesheet.css
(+7872 files in other folders)
