cabal-version: 3.4
name: cardano-wasm
version: 10.0.0.0
copyright: 2020-2025 Input Output Global Inc (IOG).
author: IOHK
maintainer: operations@iohk.io
license: Apache-2.0
build-type: Simple

common project-config
  default-language: Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings

  build-depends: base >=4.18 && <5
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wno-unticked-promoted-constructors
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

library cardano-wasi-lib
  import: project-config
  hs-source-dirs:
    src-lib

  exposed-modules:
    Cardano.Wasm.Api.GRPC
    Cardano.Wasm.Api.Info
    Cardano.Wasm.Api.InfoToTypeScript
    Cardano.Wasm.Api.Tx
    Cardano.Wasm.Api.TypeScriptDefs
    Cardano.Wasm.Api.Wallet
    Cardano.Wasm.ExceptionHandling

  other-modules:
    Cardano.Wasm.Gen.Cardano.Rpc.CurrentEra
    Cardano.Wasm.Gen.Cardano.Rpc.Era
    Cardano.Wasm.Gen.Cardano.Rpc.Node
    Cardano.Wasm.Gen.Cardano.Rpc.ProtocolParamsJson
    Cardano.Wasm.Gen.Google.Protobuf.Empty
    Cardano.Wasm.Gen.Google.Protobuf.FieldMask
    Cardano.Wasm.Gen.GrpcClient
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Cardano.AddressArray
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Cardano.Asset
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Cardano.BigInt
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Cardano.CostModel
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Cardano.CostModels
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Cardano.Datum
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Cardano.ExPrices
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Cardano.ExUnits
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Cardano.MultiAsset
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Cardano.NativeScript
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Cardano.PParams
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Cardano.PlutusData
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Cardano.ProtocolVersion
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Cardano.RationalNumber
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Cardano.Script
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Cardano.TxOutput
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Cardano.VotingThresholds
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Query.AnyChainParams
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Query.AnyUtxoData
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Query.ChainPoint
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Query.QueryService
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Query.ReadParamsRequest
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Query.ReadParamsResponse
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Query.ReadUtxosRequest
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Query.ReadUtxosResponse
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Query.TxoRef
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Query.TxoRefArray
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Submit.AnyChainTx
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Submit.SubmitService
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Submit.SubmitTxRequest
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Submit.SubmitTxResponse
    Cardano.Wasm.Gen.Utxorpc.V1alpha.Submit.TxSubmitResult
    Cardano.Wasm.Internal.Api.Random

  build-depends:
    aeson,
    base,
    base16-bytestring,
    base64-bytestring,
    bytestring,
    cardano-api,
    cardano-crypto-class,
    cardano-ledger-api,
    cardano-strict-containers,
    casing,
    containers,
    exceptions,
    filepath,
    microlens,
    text,

  if arch(wasm32)
    build-depends:
      base16-bytestring
  else
    build-depends:
      crypton

executable cardano-wasm-grpc-gen
  import: project-config
  main-is: Main.hs
  hs-source-dirs:
    app-wasm-grpc-gen

  default-language: Haskell2010
  build-depends:
    aeson,
    bytestring,
    casing,
    directory,
    filepath,
    text,
    unordered-containers,

executable cardano-wasi
  import: project-config
  main-is: Main.hs
  hs-source-dirs:
    app-wasi
    src-wasi

  default-language: Haskell2010

  if arch(wasm32)
    ghc-options:
      -no-hs-main
      "-optl-Wl,--strip-all,--export=hs_init,--export=newTx,--export=newExperimentalEraTx,--export=newConwayTx,--export=addTxInput,--export=addSimpleTxOut,--export=appendCertificateToTx,--export=setFee,--export=estimateMinFee,--export=signWithPaymentKey,--export=alsoSignWithPaymentKey,--export=toCbor,--export=generatePaymentWallet,--export=generateStakeWallet,--export=restorePaymentWalletFromSigningKeyBech32,--export=restoreStakeWalletFromSigningKeyBech32,--export=generateTestnetPaymentWallet,--export=generateTestnetStakeWallet,--export=restoreTestnetPaymentWalletFromSigningKeyBech32,--export=restoreTestnetStakeWalletFromSigningKeyBech32,--export=getAddressBech32,--export=getBech32ForPaymentVerificationKey,--export=getBech32ForPaymentSigningKey,--export=getBech32ForStakeVerificationKey,--export=getBech32ForStakeSigningKey,--export=getBase16ForPaymentVerificationKeyHash,--export=getBase16ForStakeVerificationKeyHash,--export=mallocNBytes,--export=getStrLen,--export=freeMemory"
  other-modules:
    Cardano.Wasi.Internal.Api.GRPC
    Cardano.Wasi.Internal.Api.Memory
    Cardano.Wasi.Internal.Api.Tx
    Cardano.Wasi.Internal.Api.Wallet
    Cardano.Wasi.Internal.Conversion

  build-depends:
    aeson,
    base,
    cardano-api,
    cardano-wasm:cardano-wasi-lib,
    text,
    utf8-string,

executable cardano-wasm
  import: project-config
  main-is: Main.hs
  hs-source-dirs:
    app
    src-wasm

  default-language: Haskell2010

  if arch(wasm32)
    ghc-options:
      -no-hs-main
      -optl-mexec-model=reactor
      "-optl-Wl,--strip-all"
  other-modules:
    Cardano.Wasm.Internal.JavaScript.Bridge
    Cardano.Wasm.Internal.JavaScript.GRPC
    Cardano.Wasm.Internal.JavaScript.GRPCTypes

  build-depends:
    base,
    cardano-wasm:cardano-wasi-lib,
    optparse-applicative,

  if arch(wasm32)
    build-depends:
      aeson,
      cardano-api,
      ghc-experimental,
      text,
      utf8-string,

test-suite cardano-wasm-golden
  type: exitcode-stdio-1.0
  main-is: cardano-wasm-golden.hs
  hs-source-dirs: test/cardano-wasm-golden

  if !arch(wasm32)
    import: project-config
    build-depends:
      filepath,
      hedgehog >=1.1,
      hedgehog-extras ^>=0.10,
      tasty,
      tasty-hedgehog,

    ghc-options:
      -threaded
      -rtsopts
      "-with-rtsopts=-N -T"

    build-tool-depends:
      cardano-wasm:cardano-wasm,
      tasty-discover:tasty-discover,

    other-modules:
      Test.Golden.Cardano.Wasm.TypeScript
  else
    build-depends:
      base
